--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,6 @@ collections:
     title: Uploads
     output: true
 theme: jekyll-theme-cayman
+title: DADA ry
+description: New Media Student organization
+google_analytics: UA-77263046-2
